@@ -11,6 +11,7 @@
 
 ### バグ修正
 * 同一のtimelineに対してhookが二重に実行されるバグを修正
+* 公式ReTweetに対するURLを修正
 
  3.0.0: 2013-04-21
 ------------------
