@@ -11,6 +11,7 @@
 
 ### Bug fixes
 * Fix of invoking a hook twice for the same timeline.
+* Fix a URL for a native retweet.
 
  3.0.0: 2013-04-21
 ------------------
